--- a/micronaut-cli.yml
+++ b/micronaut-cli.yml
@@ -1,5 +1,5 @@
 applicationType: default
-defaultPackage: First
+defaultPackage: crfa-metadata-service
 testFramework: junit
 sourceLanguage: java
 buildTool: maven
