--- a/pom.xml
+++ b/pom.xml
@@ -112,8 +112,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.4</version>
-                <configuration>
+                <configuration combine.self="override">
                     <filters>
                         <filter>
                             <artifact>*:*</artifact>
@@ -126,18 +125,6 @@
                     </filters>
                     <!-- Additional configuration. -->
                 </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <shadedArtifactAttached>true</shadedArtifactAttached>
-                            <shadedClassifierName>shaded</shadedClassifierName>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
 
             <plugin>
