--- a/Dockerfile.jvm
+++ b/Dockerfile.jvm
@@ -15,13 +15,15 @@ ENV PATH=$JAVA_HOME/bin:$PATH
 
 WORKDIR /app
 
-COPY pom.xml .
-COPY mvnw .
-COPY .mvn .mvn
+COPY build.gradle .
+COPY settings.gradle .
+COPY gradle.properties .
+COPY gradlew .
+COPY gradle gradle
 COPY src src
 
-RUN chmod +x mvnw
-RUN ./mvnw clean package -DskipTests
+RUN chmod +x gradlew
+RUN ./gradlew shadowJar --no-daemon
 
 FROM ubuntu:24.04
 
@@ -40,7 +42,7 @@ ENV PATH=$JAVA_HOME/bin:$PATH
 
 WORKDIR /app
 
-COPY --from=builder /app/target/crfa-metadata-service-*.jar app.jar
+COPY --from=builder /app/build/libs/crfa-metadata-service-*-all.jar app.jar
 
 EXPOSE 8080
 
